--- a/SeSACUnsplashProject/Base.lproj/Main.storyboard
+++ b/SeSACUnsplashProject/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="R3c-38-PKZ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
                             <constraint firstItem="Lcx-hi-dP4" firstAttribute="centerY" secondItem="Bk7-SB-EyK" secondAttribute="centerY" id="8bt-uQ-2s5"/>
                             <constraint firstItem="Lcx-hi-dP4" firstAttribute="centerX" secondItem="Bk7-SB-EyK" secondAttribute="centerX" id="o6Z-Yx-xQH"/>
@@ -103,7 +103,7 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TqO-2o-eGl"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemMintColor"/>
                         <constraints>
                             <constraint firstItem="wqq-ij-S9y" firstAttribute="top" secondItem="TqO-2o-eGl" secondAttribute="top" id="JxB-pQ-5VU"/>
                             <constraint firstItem="TqO-2o-eGl" firstAttribute="bottom" secondItem="wqq-ij-S9y" secondAttribute="bottom" id="hwm-FB-1iP"/>
@@ -126,6 +126,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lwn-ro-Kub" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cFl-Ii-fj6">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -142,6 +143,12 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
